--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,7 +5,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
-    <marquee>HELLO WORLD</marquee>
+    <marquee>TITLE</marquee>
 </address>
 
 <address>
